# Dopa_Pal

./: .dockerignore  .env.example  .gitignore  Anchor_Product_Vision_and_UX_Documentation.md  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_PROGRESS.md  README.md  docker-compose.yml  main.py  pyproject.toml  run.bat  run.ps1  run.sh
Dopa_Pal-backend-AI-ready/Dopa_Pal-backend-AI-ready/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  run.bat
Dopa_Pal-backend-AI-ready/Dopa_Pal-backend-AI-ready/server/: requirements.txt
Dopa_Pal-backend-AI-ready/Dopa_Pal-backend-AI-ready/server/app/: main.py
Dopa_Pal-backend-AI-ready/Dopa_Pal-backend-AI-ready/server/app/core/: config.py  (+1 more)
server/: Dockerfile  clear_db.py  main.py  migrate_db.py  pyproject.toml  pyrightconfig.json  requirements.txt  reset_db.py  seed.py  seed.sql
server/app/: main.py
server/app/api/v1/: auth_google.py  auth_notion.py  chat.py  integrations.py  rewards.py  state.py  sync.py  tasks.py  users.py
server/app/core/: config.py  database.py
server/app/models/: integration.py  reward.py  state.py  task.py  user.py
server/app/services/: constants.py  duration_parser.py  enhanced_notification.py  focus_mode.py  google_service.py  integration_service.py  logic_engines.py  notion_service.py  reward_service.py  speech_to_text.py  state_service.py  task_service.py  websocket_manager.py
server/app/services/ai/: .gitkeep  __init__.py  chunking.py  ingestion.py  pinch.py  schemas.py  segmentation.py  service.py
server/app/tests/: conftest.py
(+71 files in other folders)
