[project]
name = "dopapal"
version = "0.1.0"
description = "dopaPal FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "dateparser>=1.2.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "uvicorn>=0.30.1",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "openai>=1.0.0",
]

[project.scripts]
dopapal = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

