[project]
name = "dopapal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13.0",
    "dateparser>=1.2.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "uvicorn>=0.30.1",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.28.0",
    "dateparser>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
dopapal = "main:main"

